Added joke <p> for the landing

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
+      line-height: 1.2; 
     }
     
     .cta-buttons {
@@ -212,14 +213,11 @@
     </div>
 
     <section class="hero">
-      <p>Taking advantage of AI hallucinations through rambling audio that puts you to bed.</p>
+      <p style="color:#FFFF00">"Imagine an elderly person telling you a story but they're struggling with the details and slowly forget what they're talking about"</p>
       <div class="cta-buttons">
         <a href="https://apps.apple.com/us/app/meandering-sleep/id6502964632" class="button button-primary">
           App Store
         </a>
-      </div>
-      <br>
-      <div class="cta-buttons">
         <a href="https://play.google.com/store/apps/details?id=net.coventry.sleepless&hl=en" class="button button-primary">
           Play Store
         </a>
